--- a/docs/reference/cluster/nodes-info.asciidoc
+++ b/docs/reference/cluster/nodes-info.asciidoc
@@ -231,7 +231,7 @@ The API returns the following response:
       "host": "node-0.elastic.co",
       "ip": "192.168.17",
       "version": "{version}",
-      "transport_version": "{transport_version}",
+      "transport_version": 100000298,
       "build_flavor": "default",
       "build_type": "{build_type}",
       "build_hash": "587409e",
@@ -270,6 +270,7 @@ The API returns the following response:
 // TESTRESPONSE[s/"transport_address": "192.168.17:9300"/"transport_address": $body.$_path/]
 // TESTRESPONSE[s/"host": "node-0.elastic.co"/"host": $body.$_path/]
 // TESTRESPONSE[s/"ip": "192.168.17"/"ip": $body.$_path/]
+// TESTRESPONSE[s/"transport_version": 100000298/"transport_version": $body.$_path/]
 // TESTRESPONSE[s/"build_hash": "587409e"/"build_hash": $body.$_path/]
 // TESTRESPONSE[s/"roles": \[[^\]]*\]/"roles": $body.$_path/]
 // TESTRESPONSE[s/"attributes": \{[^\}]*\}/"attributes": $body.$_path/]
@@ -303,7 +304,7 @@ The API returns the following response:
       "host": "node-0.elastic.co",
       "ip": "192.168.17",
       "version": "{version}",
-      "transport_version": "{transport_version}",
+      "transport_version": 100000298,
       "build_flavor": "default",
       "build_type": "{build_type}",
       "build_hash": "587409e",
@@ -366,6 +367,7 @@ The API returns the following response:
 // TESTRESPONSE[s/"transport_address": "192.168.17:9300"/"transport_address": $body.$_path/]
 // TESTRESPONSE[s/"host": "node-0.elastic.co"/"host": $body.$_path/]
 // TESTRESPONSE[s/"ip": "192.168.17"/"ip": $body.$_path/]
+// TESTRESPONSE[s/"transport_version": 100000298/"transport_version": $body.$_path/]
 // TESTRESPONSE[s/"build_hash": "587409e"/"build_hash": $body.$_path/]
 // TESTRESPONSE[s/"roles": \[[^\]]*\]/"roles": $body.$_path/]
 // TESTRESPONSE[s/"attributes": \{[^\}]*\}/"attributes": $body.$_path/]
