--- a/docs/reference/ilm/apis/get-lifecycle.asciidoc
+++ b/docs/reference/ilm/apis/get-lifecycle.asciidoc
@@ -43,8 +43,7 @@ include::{es-repo-dir}/rest-api/common-parms.asciidoc[tag=timeoutparms]
 
 The following example retrieves `my_policy`:
 
-//////////////////////////
-
+////
 [source,console]
 --------------------------------------------------
 PUT _ilm/policy/my_policy
@@ -69,8 +68,13 @@ PUT _ilm/policy/my_policy
   }
 }
 --------------------------------------------------
-
-//////////////////////////
+// TESTSETUP
+[source,console]
+--------------------------------------------------
+DELETE _ilm/policy/my_policy
+--------------------------------------------------
+// TEARDOWN
+////
 
 [source,console]
 --------------------------------------------------
@@ -115,7 +119,6 @@ If the request succeeds, the body of the response contains the policy definition
   }
 }
 --------------------------------------------------
-// TEST[skip:https://github.com/elastic/elasticsearch/issues/89623]
 // TESTRESPONSE[s/"modified_date": 82392349/"modified_date": $body.my_policy.modified_date/]
 
 <1> The policy version is incremented whenever the policy is updated
