--- a/x-pack/docs/en/security/authentication/configuring-file-realm.asciidoc
+++ b/x-pack/docs/en/security/authentication/configuring-file-realm.asciidoc
@@ -1,6 +1,6 @@
 You don't need to explicitly configure a `file` realm. The `file` and `native`
 realms are added to the realm chain by default. Unless configured otherwise, the
-file realm is added first, followed by the native realm.
+`file` realm is added first, followed by the `native` realm.
 
 All the data about the users for the `file` realm is stored in two files on each 
 node in the cluster: `users` and `users_roles`. Both files are located in 
