--- a/docs/reference/modules/discovery/bootstrapping.asciidoc
+++ b/docs/reference/modules/discovery/bootstrapping.asciidoc
@@ -30,8 +30,10 @@ node:
   multiple nodes sharing a single IP address.
 
 When you start a master-eligible node, you can provide this setting on the
-command line or in the `elasticsearch.yml` file. After the cluster has formed,
-remove this setting from each node's configuration. It should not be set for
+command line or in the `elasticsearch.yml` file.
+
+IMPORTANT: After the cluster has formed, remove the `cluster.initial_master_nodes`
+setting from each node's configuration. It should not be set for
 master-ineligible nodes, master-eligible nodes joining an existing cluster, or
 when restarting one or more nodes.
 
